revert text-highlightdir, c1yo0219
This reverts commit 62061b2b182dc278a65757a7dfdfee59e578afa0.

--- a/become-a-host/privacy-type.html
+++ b/become-a-host/privacy-type.html
@@ -221,7 +221,7 @@
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="text-highlightdir dir-ltr"
+                      <span class="text_highlight dir dir-ltr"
                         >Your progress: step 2 out of 10.</span
                       >
                       <div class="_9kv7q8">
