--- a/experiences.html
+++ b/experiences.html
@@ -1656,11 +1656,11 @@
         --g-lm-u-p: normal;
         --mq-yk-l: 0.04em;
       }
-      .c1yo0219[class][class]::before {
+      .display__flex[class][class]::before {
         display: flex;
         content: '';
       }
-      .c1yo0219[class][class]::after {
+      .display__flex[class][class]::after {
         display: flex;
         content: '';
       }
@@ -4010,7 +4010,7 @@
                               <div class="flex-item">
                                 <div></div>
                               </div></div></span
-                          ><span class="text-highlightdir dir-ltr"
+                          ><span class="text_highlight dir dir-ltr"
                             >Experience hosting dashboard</span
                           >
                         </button>
@@ -4114,7 +4114,7 @@
               <div class="_1unac3l">
                 <div style="margin-top: 16px; margin-bottom: 64px">
                   <main id="site-content">
-                    <div class="c1yo0219 dir dir-ltr">
+                    <div class="display__flex dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -4177,7 +4177,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="c1yo0219 dir dir-ltr">
+                    <div class="display__flex dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -4333,7 +4333,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="c1yo0219 dir dir-ltr">
+                    <div class="display__flex dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -4441,7 +4441,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="c1yo0219 dir dir-ltr">
+                    <div class="display__flex dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -4545,7 +4545,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="c1yo0219 dir dir-ltr">
+                    <div class="display__flex dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -4649,7 +4649,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="c1yo0219 dir dir-ltr">
+                    <div class="display__flex dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -4757,7 +4757,7 @@
                 </div>
               </div>
             </main>
-            <div class="c1yo0219 dir dir-ltr">
+            <div class="display__flex dir dir-ltr">
               <footer role="contentinfo" class="_1646hxl">
                 <div class="footer__container">
                   <div class="footer__links-wrapper">
@@ -4905,14 +4905,14 @@
                     </section>
                   </div>
                   <div class="footer__copyright">
-                    <span class="text-highlightdir dir-ltr">Footer section</span>
+                    <span class="text_highlight dir dir-ltr">Footer section</span>
                     <section>
                       <div class="_1udzt2s">
                         <div class="_p03egf">
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text-highlightdir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -4935,7 +4935,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text-highlightdir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
@@ -4973,7 +4973,7 @@
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text-highlightdir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -4996,7 +4996,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text-highlightdir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
@@ -5143,7 +5143,7 @@
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text-highlightdir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -5166,7 +5166,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text-highlightdir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
