--- a/notifications.html
+++ b/notifications.html
@@ -644,7 +644,7 @@
                                                         Myrna
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Myrna</span
                                                       >
                                                     </div>
@@ -662,7 +662,7 @@
                                                         not ju...
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Hi, Jose Angelo, Let me
                                                         give you some ideas
                                                         about hosting in Airbnb.
@@ -746,7 +746,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Airbnb Support</span
                                                       >
                                                     </div>
@@ -765,7 +765,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Can you describe your
                                                         issue in a few
                                                         sentences? This will
@@ -845,7 +845,7 @@
                                                         Airbnb Support
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Airbnb Support</span
                                                       >
                                                     </div>
@@ -855,7 +855,7 @@
                                                         reservation?
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Is it about this
                                                         reservation?</span
                                                       >
@@ -940,7 +940,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Healing concert -
                                                         大阪市</span
                                                       >
@@ -955,7 +955,7 @@
                                                         (o^_^o)y Suzuki
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >maraming salamat
                                                         Jose-san ! yes contact
                                                         us before you book. then
@@ -975,7 +975,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Booking status is
                                                         Booking completed</span
                                                       >
@@ -1094,7 +1094,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Kuniatsu - 大阪市</span
                                                       >
                                                     </div>
@@ -1112,7 +1112,7 @@
                                                         string-Ja...
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Hi Jose Angelo-san ,
                                                         this slot will play
                                                         without cello. please
@@ -1136,7 +1136,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Booking status is
                                                         Booking completed</span
                                                       >
@@ -1216,7 +1216,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Baishali - New
                                                         York</span
                                                       >
@@ -1230,7 +1230,7 @@
                                                         write the review soon.
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >HI Baishali. Thanks for
                                                         sending the file over.
                                                         Really had a great time
@@ -1250,7 +1250,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Booking status is
                                                         Booking completed</span
                                                       >
@@ -1330,7 +1330,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Adrian - Baguio</span
                                                       >
                                                     </div>
@@ -1339,7 +1339,7 @@
                                                         New event
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >New event</span
                                                       >
                                                     </div>
@@ -1358,7 +1358,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Booking status is
                                                         Unavailable for Dec 21 –
                                                         23, 2021 stay</span
@@ -1442,7 +1442,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Mark - Baguio</span
                                                       >
                                                     </div>
@@ -1452,7 +1452,7 @@
                                                         already have QTPs?
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Hi Angelo, do you
                                                         already have QTPs?</span
                                                       >
@@ -1472,7 +1472,7 @@
                                                         >
                                                       </div>
                                                       <span
-                                                        class="text-highlightdir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Booking status is
                                                         Unavailable for Dec 21 –
                                                         23, 2021 stay</span
