--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -435,7 +435,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="c1yo0219 dir dir-ltr"></div>
+                  <div class="display__flex dir dir-ltr"></div>
                 </div>
                 <div class="t2pjd0h dir dir-ltr">
                   <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
@@ -469,7 +469,7 @@
                 <div class="page-shell-max-lg-plus">
                   <div class="page-shell">
                     <div class="_siy8gh">
-                      <div class="c1yo0219 dir dir-ltr" style="">
+                      <div class="display__flex dir dir-ltr" style="">
                         <header class="header">
                           <div class="header__container">
                             <div class="header__brand-wrapper">
@@ -911,7 +911,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="c1yo0219 dir dir-ltr">
+                  <div class="display__flex dir dir-ltr">
                     <footer role="contentinfo" class="footer">
                       <div class="footer__container">
                         <div class="footer__links-wrapper">
@@ -1074,7 +1074,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text-highlightdir dir-ltr"
+                          <span class="text_highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -1083,7 +1083,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text-highlightdir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1108,7 +1108,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text-highlightdir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1149,7 +1149,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text-highlightdir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1174,7 +1174,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text-highlightdir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1330,7 +1330,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text-highlightdir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1355,7 +1355,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text-highlightdir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
